<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/lnrConnecting"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_banker_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_16"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/txt_banker_calling"
            android:textSize="@dimen/xlarge_text"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@android:color/black"
            android:text="@string/txt_banker_calling"
            android:textSize="@dimen/medium_text"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_16"
            android:gravity="center"
           android:visibility="gone"
            android:textColor="@android:color/black"
            android:text="@string/lbl_calling"
            android:textSize="@dimen/medium_text"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/normal_text"
            android:visibility="gone"
            android:paddingBottom="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/txt_connecting_banker_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/profile_place_holder"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_connecting_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/connecting_circle"/>

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivReject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_40dp"
            android:layout_marginEnd="@dimen/size_40dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/call_off"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/call_on"
            android:layout_marginLeft="@dimen/size_40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ivReject"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>